test/admin/language/english/attribute/group.php
<?php
// Heading
$_['heading_title']           = 'Attribute Group';

// Text
$_['text_success']            = 'Success: You have modified Groups!';
$_['text_group'] 			  = 'Attribute Group';
$_['text_status']			  = 'Status';
$_['text_action']			  = 'Action';

// Entry
$_['entry_name']              = 'Group Name:';

// error
$_['error_name']              = 'Attribute Group Name must be between 3 and 128 characters!';
$_['error_permission']        = 'Warning: You do not have permission to modify Groups!';

// Column
$_['column_name']             = 'Attribute Group Name';
$_['column_action']           = 'Action';

// Error
$_['error_default']           = 'Warning: This attribute Group cannot be deleted as it is currently assigned as the default store Attribute Group!';
$_['error_name']              = 'Group Name must be between 3 and 128 characters!';
?>